--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -17,18 +17,18 @@ jobs:
           # To install LaTeX to build PDF book 
           # tinytex: true 
           # uncomment below and fill to pin a version
-          version: pre-release
+          # version: pre-release
           
-      - name: Setup Python
-        uses: actions/setup-python@v4.1.0
+      # - name: Setup Python
+      #   uses: actions/setup-python@v4.1.0
             
       # add software dependencies here
       
-      - name: Install python dependencies
-        run: |
-          python -m pip install jupyter
-          python -m pip install numpy
-          python -m pip install matplotlib
+      # - name: Install python dependencies
+      #   run: |
+      #     python -m pip install jupyter
+      #     python -m pip install numpy
+      #     python -m pip install matplotlib
 
       - name: Publish to GitHub Pages (and render)
         uses: quarto-dev/quarto-actions/publish@v2
