--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 website:
   title: "Real World Data Science"
   image: "rss-white-logo.png"
-  repo-url: https://github.com/realworlddatascience/site
+  repo-url: https://github.com/realworlddatascience/realworlddatascience.github.io
   repo-actions: [edit, issue]
   navbar:
     logo: "rss-white-logo.png"
