added pages for exercises and training guides

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,7 +29,9 @@ website:
           text: "**Call for contributions**"
         - contributor-docs\case-studies.qmd
         - contributor-docs\explainers.qmd
+        - contributor-docs\exercises.qmd
         - contributor-docs\datasets.qmd
+        - contributor-docs\training-guides.qmd
         - contributor-docs\recommender.qmd
         - text: "---"
         - contributor-docs\contributor-guidelines.qmd
@@ -38,7 +40,7 @@ website:
   page-navigation: true
 
   page-footer:
-    left: "Built by the [Royal Statistical Society](https://rss.org.uk/) using [Quarto](https://quarto.org/)" 
+    left: "Built by the [RSS](https://rss.org.uk/) using [Quarto](https://quarto.org/)" 
     center:
       - contact.qmd  
     right: 
