--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -13,7 +13,7 @@ jobs:
         
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
-        with:
+        # with:
           # To install LaTeX to build PDF book 
           # tinytex: true 
           # uncomment below and fill to pin a version
