--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,7 +12,7 @@ website:
     left:
       - href: index.qmd
         text: Overview
-      - href: contributor-docs\call-for-contributions.qmd
+      - href: contributor-docs\index.qmd
         text: "Call for contributions"
     right:
       - href: https://github.com/realworlddatascience
