--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,7 +25,7 @@ website:
       style: "docked"
       background: light
       contents:
-        - href: contributor-docs\call-for-contributions.qmd
+        - href: contributor-docs\index.qmd
           text: "**Call for contributions**"
         - contributor-docs\case-studies.qmd
         - contributor-docs\explainers.qmd
