--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,7 +12,7 @@ website:
     left:
       - href: index.qmd
         text: Overview
-      - href: contributor-docs\index.qmd
+      - href: contributor-docs/index.qmd
         text: "Call for contributions"
     right:
       - href: https://github.com/realworlddatascience
@@ -27,15 +27,15 @@ website:
       contents:
         - href: contributor-docs\index.qmd
           text: "**Call for contributions**"
-        - contributor-docs\case-studies.qmd
-        - contributor-docs\explainers.qmd
-        - contributor-docs\exercises.qmd
-        - contributor-docs\datasets.qmd
-        - contributor-docs\training-guides.qmd
-        - contributor-docs\recommender.qmd
+        - contributor-docs/case-studies.qmd
+        - contributor-docs/explainers.qmd
+        - contributor-docs/exercises.qmd
+        - contributor-docs/datasets.qmd
+        - contributor-docs/training-guides.qmd
+        - contributor-docs/recommender.qmd
         - text: "---"
-        - contributor-docs\contributor-guidelines.qmd
-        - contributor-docs\style-guide.qmd   
+        - contributor-docs/contributor-guidelines.qmd
+        - contributor-docs/style-guide.qmd   
 
   page-navigation: true
 
