--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,7 +12,7 @@ website:
     left:
       - href: index.qmd
         text: Overview
-      - href: contributor-docs/index.qmd
+      - href: contributor-docs/call-for-contributions.qmd
         text: "Call for contributions"
     right:
       - href: https://github.com/realworlddatascience
@@ -25,7 +25,7 @@ website:
       style: "docked"
       background: light
       contents:
-        - href: contributor-docs/index.qmd
+        - href: contributor-docs/call-for-contributions.qmd
           text: "**Call for contributions**"
         - contributor-docs/case-studies.qmd
         - contributor-docs/explainers.qmd
