add favicon and floating sidebar

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,6 +4,7 @@ project:
 website:
   title: "Real World Data Science"
   image: "rss-white-logo.png"
+  favicon: "rss-white-BG.png"
   repo-url: https://github.com/realworlddatascience/realworlddatascience.github.io
   repo-actions: [edit, issue]
   navbar:
@@ -22,7 +23,7 @@ website:
 
   sidebar: 
     - title: "Call for contributions"
-      style: "docked"
+      style: "floating"
       background: light
       contents:
         - href: contributor-docs/call-for-contributions.qmd
