minor text edits

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,9 @@ website:
   title: "Real World Data Science"
   image: "rss-white-logo.png"
   favicon: "rss-white-BG.png"
+  twitter-card: true
+  open-graph: true
+  site-url: https://realworlddatascience.github.io/
   repo-url: https://github.com/realworlddatascience/realworlddatascience.github.io
   repo-actions: [edit, issue]
   navbar:
@@ -53,6 +56,7 @@ website:
 format:
   html:
     theme: flatly
+    dark: darkly
     css: styles.css
     toc: true
 
