added training guides, plus other general updates

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -55,8 +55,9 @@ website:
 
 format:
   html:
-    theme: flatly
-    dark: darkly
+    theme: 
+      light: flatly
+      dark: darkly
     css: styles.css
     toc: true
 
