added meet the team page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,8 @@ website:
         text: Overview
       - href: contributor-docs/call-for-contributions.qmd
         text: "Call for contributions"
+      - href: editors-blog/meet-the-team/meet-the-team.qmd
+        text: "Meet the team"
     right:
       - href: https://github.com/realworlddatascience
         icon: github
