Fix styling errors with sidebar and TOC

--- a/news-and-views/editors-blog/_metadata.yml
+++ b/news-and-views/editors-blog/_metadata.yml
@@ -6,5 +6,5 @@
 
 # Enable banner style title blocks
 title-block-banner: "#ecf0f1"
+title-block-banner-color: body
 sidebar: false
-toc-location: left
