Added social links

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -63,6 +63,10 @@ website:
         icon: github
       - href: https://twitter.com/rwdatasci
         icon: twitter
+      - href: https://fosstodon.org/@rwdatasci
+        icon: mastodon
+      - href: https://www.linkedin.com/showcase/rss-real-world-data-science
+        icon: linkedin
 
 format:
   html:
