Add Google Analytics tag

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,7 @@ website:
   site-url: https://realworlddatascience.github.io/
   repo-url: https://github.com/realworlddatascience/realworlddatascience.github.io
   repo-actions: [edit, issue]
+  google-analytics: "G-1TTWB7YTR6"
   navbar:
     logo: "rss-white-logo.png"
     logo-alt: "RSS logo"
