added DSB to index page, plus minor text edits

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -51,7 +51,7 @@ website:
         - href: news-and-views/index.qmd
           text: "**In this section**"
         - news-and-views/editors-blog/index.qmd
-        # - news-and-views/datasciencebites/index.qmd
+        - news-and-views/datasciencebites/index.qmd
 
   page-navigation: true
 
