--- a/news-and-views/editors-blog/_metadata.yml
+++ b/news-and-views/editors-blog/_metadata.yml
@@ -8,3 +8,7 @@
 title-block-banner: "#ecf0f1"
 title-block-banner-color: body
 sidebar: false
+comments:
+  giscus: 
+      repo: realworlddatascience/realworlddatascience.github.io
+      category: General
