Add feed for news and views

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ website:
   favicon: "rss-white-BG.png"
   twitter-card: true
   open-graph: true
-  site-url: https://realworlddatascience.github.io/
+  site-url: https://realworlddatascience.net/
   repo-url: https://github.com/realworlddatascience/realworlddatascience.github.io
   repo-actions: [edit, issue]
   google-analytics: "G-1TTWB7YTR6"
@@ -27,6 +27,8 @@ website:
         icon: github
       - href: https://twitter.com/rwdatasci
         icon: twitter
+      - href: https://realworlddatascience.net/news-and-views/index.xml
+        icon: rss
 
   sidebar: 
     - title: "Call for contributions"
