Added DSB to contributor docs listing

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -43,6 +43,7 @@ website:
         - contributor-docs/datasets.qmd
         - contributor-docs/training-guides.qmd
         - contributor-docs/recommender.qmd
+        - contributor-docs/datasciencebites.qmd
         - text: "---"
         - contributor-docs/contributor-guidelines.qmd
         - contributor-docs/style-guide.qmd
