--- a/news-and-views/datasciencebites/posts/_metadata.yml
+++ b/news-and-views/datasciencebites/posts/_metadata.yml
@@ -9,4 +9,4 @@ title-block-banner: "#ecf0f1"
 title-block-banner-color: body
 sidebar: false
 include-after-body: 
-  - datasciencebites-logo.html
+  - ../datasciencebites-logo.html
