--- a/news-and-views/datasciencebites/posts/_metadata.yml
+++ b/news-and-views/datasciencebites/posts/_metadata.yml
@@ -8,5 +8,9 @@
 title-block-banner: "#ecf0f1"
 title-block-banner-color: body
 sidebar: false
+comments:
+  giscus: 
+      repo: realworlddatascience/realworlddatascience.github.io
+      category: General
 include-after-body: 
   - ../datasciencebites-logo.html
