...and back again

--- a/news-and-views/datasciencebites/_metadata.yml
+++ b/news-and-views/datasciencebites/_metadata.yml
@@ -13,4 +13,4 @@ comments:
       repo: realworlddatascience/realworlddatascience.github.io
       category: General
 include-after-body: 
-  - ../datasciencebites-logo.html
+  - datasciencebites-logo.html
