--- a/_quarto.yml
+++ b/_quarto.yml
@@ -60,9 +60,9 @@ website:
 
   page-footer:
     left: "Built by the [RSS](https://rss.org.uk/) using [Quarto](https://quarto.org/)" 
-    center:
-      - contact.qmd  
-    right: 
+    # center:
+    right:
+      - contact.qmd 
       - href: https://github.com/realworlddatascience
         icon: github
       - href: https://twitter.com/rwdatasci
