--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,7 +33,7 @@ website:
   sidebar: 
     - title: "Call for contributions"
       style: "floating"
-      background: light
+      background: none
       contents:
         - href: contributor-docs/call-for-contributions.qmd
           text: "**Call for contributions**"
@@ -48,8 +48,6 @@ website:
         - contributor-docs/contributor-guidelines.qmd
         - contributor-docs/style-guide.qmd
     - title: "News and views"
-      style: "floating"
-      background: light
       contents: 
         - href: news-and-views/index.qmd
           text: "**In this section**"
@@ -59,6 +57,7 @@ website:
   page-navigation: true
 
   page-footer:
+    background: light
     left: "Built by the [RSS](https://rss.org.uk/) using [Quarto](https://quarto.org/)" 
     # center:
     right:
