set sidebar bg colour to white

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,7 +33,7 @@ website:
   sidebar: 
     - title: "Call for contributions"
       style: "floating"
-      background: none
+      background: "#FFFFFF"
       contents:
         - href: contributor-docs/call-for-contributions.qmd
           text: "**Call for contributions**"
