--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,10 +25,13 @@ website:
     right:
       - href: https://github.com/realworlddatascience
         icon: github
+        aria-label: GitHub
       - href: https://twitter.com/rwdatasci
         icon: twitter
+        aria-label: Twitter
       - href: https://realworlddatascience.net/news-and-views/index.xml
         icon: rss
+        aria-label: RSS feed
 
   sidebar: 
     - title: "Call for contributions"
@@ -64,12 +67,16 @@ website:
       - contact.qmd 
       - href: https://github.com/realworlddatascience
         icon: github
+        aria-label: GitHub
       - href: https://twitter.com/rwdatasci
         icon: twitter
+        aria-label: Twitter
       - href: https://fosstodon.org/@rwdatasci
         icon: mastodon
+        aria-label: Mastodon
       - href: https://www.linkedin.com/showcase/rss-real-world-data-science
         icon: linkedin
+        aria-label: LinkedIn
 
 format:
   html:
