--- a/_quarto.yml
+++ b/_quarto.yml
@@ -56,6 +56,9 @@ website:
           text: "**In this section**"
         - news-and-views/datasciencebites/index.qmd
         - news-and-views/editors-blog/index.qmd
+        - text: "---"
+        - href: news-and-views/newsletter/index.qmd
+          text: Newsletter
 
   page-navigation: true
 
