Jan 2023 DSAI newsletter added

--- a/news-and-views/newsletter/rssdsai-newsletter.yml
+++ b/news-and-views/newsletter/rssdsai-newsletter.yml
@@ -1,9 +1,12 @@
+- title: "January 2023"
+  intro: 2023 - Happy New Year!… Hope you had a fun and festive holiday season or at least drank and ate enough to take your mind off the strikes, energy prices, cost of living crisis, war in Ukraine and all the other depressing headlines… Perhaps time for something a little different, with a wrap up of data science developments in the last month. Don't miss out on the ChatGPT fun and games in the middle section! 
+  href: https://datasciencesection.org/2023/01/05/january-newsletter-3/
+  date: 01/05/2023
+
 - title: "December 2022"
   intro: December already… Happy Holidays to everyone! It certainly feels like winter is here judging by the lack of sunlight. But a December like no other, as we have a World Cup to watch - although half empty, beer-less, air-conditioned stadiums in repressive Qatar does not sit well… 
   href: https://datasciencesection.org/2022/12/03/december-newsletter-3/
   date: 12/03/2022
-  # image:
-  # alt:
 
 - title: "November 2022"
   intro: Another month, another UK Prime Minister it seems - certainly the rate of political dramas doesn't seem to be slowing…
