build interview section

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -54,6 +54,7 @@ website:
       contents: 
         - href: news-and-views/index.qmd
           text: "**In this section**"
+        - news-and-views/interviews/index.qmd
         - news-and-views/datasciencebites/index.qmd
         - news-and-views/editors-blog/index.qmd
         - text: "---"
