Feb newsletter link added

--- a/news-and-views/newsletter/rssdsai-newsletter.yml
+++ b/news-and-views/newsletter/rssdsai-newsletter.yml
@@ -1,3 +1,8 @@
+- title: "February 2023"
+  intro: January reminded us (in the UK at least) of the joys of a ‘big coat’ with 2023 definitely off to a cold start… No great change to the depressing headlines though so hopefully time for a bit of distraction with a wrap up of data science developments in the last month. Don’t miss out on more ChatGPT fun and games in the middle section!
+  href: https://datasciencesection.org/2023/02/04/february-newsletter-3/
+  date: 02/04/2023
+  
 - title: "January 2023"
   intro: 2023 - Happy New Year!… Hope you had a fun and festive holiday season or at least drank and ate enough to take your mind off the strikes, energy prices, cost of living crisis, war in Ukraine and all the other depressing headlines… Perhaps time for something a little different, with a wrap up of data science developments in the last month. Don't miss out on the ChatGPT fun and games in the middle section! 
   href: https://datasciencesection.org/2023/01/05/january-newsletter-3/
