--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,6 @@ project:
   type: website
 
 website:
-  title: "Real World Data Science"
   image: "rss-white-logo.png"
   favicon: "rss-white-BG.png"
   twitter-card: true
@@ -12,8 +11,8 @@ website:
   repo-actions: [edit, issue]
   google-analytics: "G-1TTWB7YTR6"
   navbar:
-    logo: "rss-white-logo.png"
-    logo-alt: "RSS logo"
+    logo: "dummylogo.png"
+    logo-alt: "dummy logo"
     left:
       - href: index.qmd
         text: Overview
@@ -22,16 +21,16 @@ website:
       - href: news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd
         text: "Meet the team"
       - href: news-and-views/index.qmd
-    right:
-      - href: https://github.com/realworlddatascience
-        icon: github
-        aria-label: GitHub
-      - href: https://twitter.com/rwdatasci
-        icon: twitter
-        aria-label: Twitter
-      - href: https://realworlddatascience.net/news-and-views/index.xml
-        icon: rss
-        aria-label: RSS feed
+    # right:
+    #   - href: https://github.com/realworlddatascience
+    #     icon: github
+    #     aria-label: GitHub
+    #   - href: https://twitter.com/rwdatasci
+    #     icon: twitter
+    #     aria-label: Twitter
+    #   - href: https://realworlddatascience.net/news-and-views/index.xml
+    #     icon: rss
+    #     aria-label: RSS feed
 
   sidebar: 
     - title: "Call for contributions"
@@ -84,9 +83,7 @@ website:
 
 format:
   html:
-    theme: 
-      light: flatly
-      dark: darkly
+    theme: [lux, rwds.scss]
     css: styles.css
     toc: true
 
