more work on home design

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,11 +11,12 @@ website:
   repo-actions: [edit, issue]
   google-analytics: "G-1TTWB7YTR6"
   navbar:
+    background: light
     logo: "dummylogo.png"
     logo-alt: "dummy logo"
     left:
       - href: index.qmd
-        text: Overview
+        text: "Home"
       - href: contributor-docs/call-for-contributions.qmd
         text: "Call for contributions"
       - href: news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd
@@ -63,7 +64,7 @@ website:
   page-navigation: true
 
   page-footer:
-    background: light
+    background: "#000000"
     left: "Built by the [RSS](https://rss.org.uk/) using [Quarto](https://quarto.org/)" 
     # center:
     right:
