--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,8 @@ website:
   title: "Real World Data Science"
   image: "rss-white-logo.png"
   favicon: "rss-white-BG.png"
-  twitter-card: true
+  twitter-card:
+    site: "@rwdatasci"
   open-graph: true
   site-url: https://realworlddatascience.net/
   repo-url: https://github.com/realworlddatascience/realworlddatascience.github.io
