article design customisation, day 1

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,8 +2,8 @@ project:
   type: website
 
 website:
-  image: "rss-white-logo.png"
-  favicon: "rss-white-BG.png"
+  image: "RWDS Main Logo_Boxed Black_RGB.png"
+  favicon: "RWDS Main Logo_Boxed Black_RGB.png"
   twitter-card:
     site: "@rwdatasci"
   open-graph: true
@@ -12,9 +12,9 @@ website:
   repo-actions: [edit, issue]
   google-analytics: "G-1TTWB7YTR6"
   navbar:
-    background: light
-    logo: "dummylogo.png"
-    logo-alt: "dummy logo"
+    background: "#f0eeeb"
+    logo: "RWDS Main Logo_Boxed Black_RGB.png"
+    logo-alt: "Real World Data Science brand"
     left:
       - href: index.qmd
         text: "Home"
