--- a/news-and-views/datasciencebites/_metadata.yml
+++ b/news-and-views/datasciencebites/_metadata.yml
@@ -5,7 +5,7 @@
 # freeze: auto
 
 # Enable banner style title blocks
-title-block-banner: "#ecf0f1"
+title-block-banner: "#f0eeeb"
 title-block-banner-color: body
 sidebar: false
 comments:
