add March newsletter

--- a/news-and-views/newsletter/rssdsai-newsletter.yml
+++ b/news-and-views/newsletter/rssdsai-newsletter.yml
@@ -1,3 +1,8 @@
+- title: "March 2023"
+  intro: February may technically be the shortest month but it certainly can feel long… I think I sensed a slight brightening in the morning light but I may have been mistaken… Maybe time for a bit of distraction with a wrap up of data science developments in the last month. Don’t miss out on more ChatGPT fun and games in the middle section!
+  href: https://datasciencesection.org/2023/03/05/march-newsletter-4/
+  date: 03/05/2023
+
 - title: "February 2023"
   intro: January reminded us (in the UK at least) of the joys of a ‘big coat’ with 2023 definitely off to a cold start… No great change to the depressing headlines though so hopefully time for a bit of distraction with a wrap up of data science developments in the last month. Don’t miss out on more ChatGPT fun and games in the middle section!
   href: https://datasciencesection.org/2023/02/04/february-newsletter-3/
