style sheet renamed

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -104,7 +104,7 @@ website:
 format:
   html:
     theme: [lux, rwds.scss]
-    css: styles.css
+    css: rwds.css
     toc: true
     grid:
       sidebar-width: 250px
