navbar styling and font spacing

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,7 +17,7 @@ website:
     logo-alt: "Real World Data Science brand"
     title: false
     collapse-below: xl
-    left:
+    right:
       - href: index.qmd
         text: "Home"
       - href: contributor-docs/call-for-contributions.qmd
@@ -109,7 +109,7 @@ format:
     grid:
       sidebar-width: 250px
       body-width: 825px
-      margin-width: 250px
+      margin-width: 400px
 
 execute: 
   freeze: auto
