nav-footer font styling

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -84,10 +84,9 @@ website:
 
   page-footer:
     background: "#000000"
-    left: "Built by the [RSS](https://rss.org.uk/) using [Quarto](https://quarto.org/)" 
-    # center:
     right:
-      - contact.qmd 
+      - href: contact.qmd
+        text: Contact 
       - href: https://github.com/realworlddatascience
         icon: github
         aria-label: GitHub
