--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  image: "RWDS Main Logo_Boxed Black_RGB.png"
+  image: "images/RWDS Main Logo_Boxed Black_RGB.png"
   favicon: "RWDS Main Logo_Boxed Black_RGB.png"
   twitter-card:
     site: "@rwdatasci"
@@ -84,7 +84,7 @@ website:
 
   page-footer:
     background: "#000000"
-    right:
+    center:
       - href: contact.qmd
         text: Contact 
       - href: https://github.com/realworlddatascience
