brand logo file renamed and repointed

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,8 +2,8 @@ project:
   type: website
 
 website:
-  image: "images/RWDS Main Logo_Boxed Black_RGB.png"
-  favicon: "RWDS Main Logo_Boxed Black_RGB.png"
+  image: images/rwds-logo.png
+  favicon: images/rwds-logo.png
   twitter-card:
     site: "@rwdatasci"
   open-graph: true
@@ -13,7 +13,7 @@ website:
   # google-analytics: "G-1TTWB7YTR6"
   navbar:
     background: "#f0eeeb"
-    logo: "RWDS Main Logo_Boxed Black_RGB.png"
+    logo: images/rwds-logo.png
     logo-alt: "Real World Data Science brand"
     title: false
     collapse-below: xl
