sidebar text styling fixed for new nav layout

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -39,8 +39,7 @@ website:
       style: "floating"
       background: "#FFFFFF"
       contents:
-        - href: contributor-docs/call-for-contributions.qmd
-          text: "**Call for contributions**"
+        - contributor-docs/call-for-contributions.qmd
         - contributor-docs/case-studies.qmd
         - contributor-docs/explainers.qmd
         - contributor-docs/exercises.qmd
@@ -53,8 +52,7 @@ website:
         - contributor-docs/style-guide.qmd
     - title: "News and views"
       contents: 
-        - href: news-and-views/index.qmd
-          text: "**In this section**"
+        - news-and-views/index.qmd
         - news-and-views/interviews/index.qmd
         - news-and-views/datasciencebites/index.qmd
         - news-and-views/editors-blog/index.qmd
