navbar items alignment fixed

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,7 +16,7 @@ website:
     logo: images/rwds-logo.png
     logo-alt: "Real World Data Science brand"
     title: false
-    collapse-below: xl
+    collapse-below: lg
     right:
       - href: index.qmd
         text: "Home"
