--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /.quarto/
 /_site/
 
-/images/nasa-Q1p7bh3SHj8-unsplash-crop.png/
+# List of licenced image files to be excluded from repo
+/images/nasa-Q1p7bh3SHj8-unsplash-crop.png
