--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,8 +20,8 @@ website:
     right:
       - href: index.qmd
         text: "Home"
-      - href: contributor-docs/call-for-contributions.qmd
-        text: "Call for contributions"
+      # - href: contributor-docs/call-for-contributions.qmd
+      #   text: "Call for contributions"
       - href: news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd
         text: "Meet the team"
       - text: News and views
@@ -47,11 +47,13 @@ website:
     #     aria-label: RSS feed
 
   sidebar: 
+    - title: "About us"
+      contents:
+        - about-rwds.qmd
+        - news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd
+        - rwds-partners.qmd
+        - contact.qmd
     - title: "Call for contributions"
-      style: "floating"
-      background: "#f0eeeb"
-      collapse-level: 2
-      align: left
       contents:
         - contributor-docs/call-for-contributions.qmd
         - contributor-docs/case-studies.qmd
@@ -61,14 +63,9 @@ website:
         - contributor-docs/training-guides.qmd
         - contributor-docs/recommender.qmd
         - contributor-docs/datasciencebites.qmd
-        - text: "---"
         - contributor-docs/contributor-guidelines.qmd
         - contributor-docs/style-guide.qmd
     - title: "News and views"
-      style: "floating"
-      background: "#f0eeeb"
-      collapse-level: 2
-      align: left
       contents: 
         - news-and-views/index.qmd
         - news-and-views/interviews/index.qmd
