T&Cs added and bottom nav complete

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -53,6 +53,7 @@ website:
         - news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd
         - rwds-partners.qmd
         - contact.qmd
+        - ts-and-cs.qmd
     - title: "Call for contributions"
       contents:
         - contributor-docs/call-for-contributions.qmd
@@ -80,9 +81,9 @@ website:
 
   page-footer:
     background: "#000000"
-    center:
-      - href: contact.qmd
-        text: Contact 
+    left: |
+      Copyright &copy; 2023 [Royal Statistical Society](https://rss.org.uk/)
+    center:  
       - href: https://github.com/realworlddatascience
         icon: github
         aria-label: GitHub
@@ -95,6 +96,8 @@ website:
       - href: https://www.linkedin.com/showcase/rss-real-world-data-science
         icon: linkedin
         aria-label: LinkedIn
+    right: |
+      [Terms & Conditions](/ts-and-cs.qmd)
 
 format:
   html:
