--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,22 +18,26 @@ website:
     title: false
     collapse-below: lg
     right:
-      - href: index.qmd
-        text: "Home"
+      - case-studies/index.qmd
+      - ideas/index.qmd
+      - careers/index.qmd
+      - viewpoints/index.qmd
+      # - href: index.qmd
+      #   text: "Home"
       # - href: contributor-docs/call-for-contributions.qmd
       #   text: "Call for contributions"
-      - href: news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd
-        text: "Meet the team"
-      - text: News and views
-        menu:         
-          - href: news-and-views/index.qmd
-            text: Latest
-          - news-and-views/interviews/index.qmd
-          - href: news-and-views/datasciencebites/index.qmd
-            text: DataScienceBites
-          - news-and-views/editors-blog/index.qmd
-          - href: news-and-views/newsletter/index.qmd
-            text: Newsletter
+      # - href: news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd
+      #   text: "Meet the team"
+      # - text: News and views
+      #   menu:         
+      #     - href: news-and-views/index.qmd
+      #       text: Latest
+      #     - news-and-views/interviews/index.qmd
+      #     - href: news-and-views/datasciencebites/index.qmd
+      #       text: DataScienceBites
+      #     - news-and-views/editors-blog/index.qmd
+      #     - href: news-and-views/newsletter/index.qmd
+      #       text: Newsletter
 
     # right:
     #   - href: https://github.com/realworlddatascience
