homepage styling and viewpoints nav complete

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -70,12 +70,19 @@ website:
         - contributor-docs/datasciencebites.qmd
         - contributor-docs/contributor-guidelines.qmd
         - contributor-docs/style-guide.qmd
-    - title: "News and views"
+    # - title: "News and views"
+    #   contents: 
+    #     - news-and-views/index.qmd
+    #     - news-and-views/interviews/index.qmd
+    #     - news-and-views/datasciencebites/index.qmd
+    #     - news-and-views/editors-blog/index.qmd
+    #     - href: news-and-views/newsletter/index.qmd
+    #       text: Newsletter
+    - title: "Viewpoints"
       contents: 
-        - news-and-views/index.qmd
-        - news-and-views/interviews/index.qmd
-        - news-and-views/datasciencebites/index.qmd
-        - news-and-views/editors-blog/index.qmd
+        - viewpoints/index.qmd
+        - viewpoints/editors-blog/index.qmd
+        - viewpoints/interviews/index.qmd
         - href: news-and-views/newsletter/index.qmd
           text: Newsletter
 
