Add About RWDS menu

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,6 +22,14 @@ website:
       - ideas/index.qmd
       - careers/index.qmd
       - viewpoints/index.qmd
+      - text: "About RWDS"
+        menu: 
+        - text: "Who we are"
+          href: about-rwds.qmd
+        - text: "How to contribute"
+          href: contributor-docs/call-for-contributions.qmd
+        - text: "Contact us"
+          href: contact.qmd
       # - href: index.qmd
       #   text: "Home"
       # - href: contributor-docs/call-for-contributions.qmd
