--- a/_quarto.yml
+++ b/_quarto.yml
@@ -86,6 +86,10 @@ website:
     #     - news-and-views/editors-blog/index.qmd
     #     - href: news-and-views/newsletter/index.qmd
     #       text: Newsletter
+    - title: "Ideas"
+      contents:
+        - ideas/index.qmd
+        - ideas/datasciencebites/index.qmd
     - title: "Viewpoints"
       contents: 
         - viewpoints/index.qmd
