--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,6 +2,7 @@ project:
   type: website
 
 website:
+  title: "Real World Data Science"
   image: images/rwds-logo-150px.png
   favicon: images/rwds-logo-150px.png
   twitter-card:
