set Quarto to prerelease

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,11 +18,11 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
-      #   with:
+        with:
       #     To install LaTeX to build PDF book 
       #     tinytex: true 
       #     uncomment below and fill to pin a version
-      #     version: pre-release
+          version: pre-release
           
       # - name: Setup Python
       #   uses: actions/setup-python@v4.1.0
