added rss feeds

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -84,6 +84,9 @@ website:
       - href: https://www.linkedin.com/showcase/rss-real-world-data-science
         icon: linkedin
         aria-label: LinkedIn
+      - href: feeds.html
+        icon: rss
+        aria-label: RWDS rss
     right: |
       [Terms & Conditions](/ts-and-cs.qmd)
 
