--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 website:
   title: "Real World Data Science"
   image: images/rwds-logo-150px.png
-  favicon: images/rwds-logo-150px.png
+  favicon: images/rwds-favicon.png
   twitter-card:
     site: "@rwdatasci"
   open-graph: true
