added sidebar and categories

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -51,6 +51,10 @@ website:
         - contributor-docs/datasciencebites.qmd
         - contributor-docs/contributor-guidelines.qmd
         - contributor-docs/style-guide.qmd
+    - title: "Careers"
+      contents:
+        - careers/index.qmd
+        - careers/career-profiles/index.qmd
     - title: "Ideas"
       contents:
         - ideas/index.qmd
