--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ website:
   site-url: https://realworlddatascience.net/
   repo-url: https://github.com/realworlddatascience/realworlddatascience.github.io
   repo-actions: [edit, issue]
-  google-analytics: "G-1TTWB7YTR6"
+  # google-analytics: "G-1TTWB7YTR6"
   navbar:
     background: "#f0eeeb"
     logo: images/rwds-logo-150px.png
@@ -59,6 +59,7 @@ website:
       contents:
         - ideas/index.qmd
         - ideas/datasciencebites/index.qmd
+        - ideas/tutorials/index.qmd
     - title: "Viewpoints"
       contents: 
         - viewpoints/index.qmd
