Added April 2023 newsletter

--- a/viewpoints/newsletter/rssdsai-newsletter.yml
+++ b/viewpoints/newsletter/rssdsai-newsletter.yml
@@ -1,3 +1,8 @@
+- title: "April 2023"
+  intro: March is finished... and I may be mistaken but it feels slightly less cold and wet and the daffodils are out so... spring must be here!... Time to celebrate with a wrap up of data science developments in the last month. Don't miss out on GPT4 excitement in the middle section!
+  href: https://rssdsaisection.substack.com/p/april-newsletter-a21
+  date: 04/01/2023
+  
 - title: "March 2023"
   intro: February may technically be the shortest month but it certainly can feel long… I think I sensed a slight brightening in the morning light but I may have been mistaken… Maybe time for a bit of distraction with a wrap up of data science developments in the last month. Don’t miss out on more ChatGPT fun and games in the middle section!
   href: https://datasciencesection.org/2023/03/05/march-newsletter-4/
