--- a/viewpoints/newsletter/rssdsai-newsletter.yml
+++ b/viewpoints/newsletter/rssdsai-newsletter.yml
@@ -1,3 +1,8 @@
+- title: "May 2023"
+  intro: Another month flies by and May is here... and this year in the UK, May is richly blessed with Bank Holidays so... hopefully plenty of time to catch up on the data science and AI developments of the last month. Don't miss out on more generative AI fun and games in the middle section!
+  href: https://rssdsaisection.substack.com/p/may-newsletter-65c
+  date: 05/01/2023
+  
 - title: "April 2023"
   intro: March is finished... and I may be mistaken but it feels slightly less cold and wet and the daffodils are out so... spring must be here!... Time to celebrate with a wrap up of data science developments in the last month. Don't miss out on GPT4 excitement in the middle section!
   href: https://rssdsaisection.substack.com/p/april-newsletter-a21
