June 2023 newsletter link added

--- a/viewpoints/newsletter/rssdsai-newsletter.yml
+++ b/viewpoints/newsletter/rssdsai-newsletter.yml
@@ -1,3 +1,8 @@
+- title: "June 2023"
+  intro: One final bank holiday in the rear-view mirror and June is here… and hopefully some warmer weather. We're mixing things up this month and having an Open Source special… we still have our regular sections on bias and ethics and generative AI but then focus on recent developments in the open source community, specifically focusing on LLM… if you're curious about finetuning your own 30 billion parameter large language model on one gpu, don't miss this!
+  href: https://rssdsaisection.substack.com/p/june-newsletter-449
+  date: 06/02/2023
+
 - title: "May 2023"
   intro: Another month flies by and May is here... and this year in the UK, May is richly blessed with Bank Holidays so... hopefully plenty of time to catch up on the data science and AI developments of the last month. Don't miss out on more generative AI fun and games in the middle section!
   href: https://rssdsaisection.substack.com/p/may-newsletter-65c
