--- a/viewpoints/newsletter/rssdsai-newsletter.yml
+++ b/viewpoints/newsletter/rssdsai-newsletter.yml
@@ -1,3 +1,8 @@
+- title: "July 2023"
+  intro: July in the UK... when the shorts properly come out (sun or not...) and ‘Test Match Special’ becomes the soundtrack to the summer... hopefully plenty of time to catch up on the data science and AI developments of the last month. Don't miss out on more generative AI fun and games in the middle section!
+  href: https://rssdsaisection.substack.com/p/july-newsletter-940
+  date: 07/03/2023
+
 - title: "June 2023"
   intro: One final bank holiday in the rear-view mirror and June is here… and hopefully some warmer weather. We're mixing things up this month and having an Open Source special… we still have our regular sections on bias and ethics and generative AI but then focus on recent developments in the open source community, specifically focusing on LLM… if you're curious about finetuning your own 30 billion parameter large language model on one gpu, don't miss this!
   href: https://rssdsaisection.substack.com/p/june-newsletter-449
