--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -66,6 +66,7 @@
   "projectOwner": "realworlddatascience",
   "repoType": "github",
   "repoHost": "https://github.com",
+  "commit: true",
   "commitConvention": "none",
   "commitType": "docs"
 }
