--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -4,6 +4,7 @@
   ],
   "imageSize": 100,
   "contributorsPerLine": 7,
+  "badgeTemplate": "[![All Contributors](https://img.shields.io/badge/all_contributors-<%= contributors.length %>-orange.svg)](#contributors)",
   "skipCi": true,
   "contributorsSortAlphabetically": true,
   "contributors": [
@@ -66,7 +67,6 @@
   "projectOwner": "realworlddatascience",
   "repoType": "github",
   "repoHost": "https://github.com",
-  "commit: true",
   "commitConvention": "none",
   "commitType": "docs"
 }
