--- a/viewpoints/newsletter/rssdsai-newsletter.yml
+++ b/viewpoints/newsletter/rssdsai-newsletter.yml
@@ -1,3 +1,8 @@
+- title: "September 2023"
+  intro: I hope you have been enjoying the summer... we’ve had the world’s hottest July ever, although sadly this seems to have translated into rain for the UK... At least we’ve had the World Athletics Championships for inspiration... But high time for some in depth data science commentary -- a bumper issue this time after our month off! Don't miss out on more generative AI fun and games in the middle section!
+  href: https://rssdsaisection.substack.com/p/september-newsletter-256
+  date: 09/04/2023
+
 - title: "July 2023"
   intro: July in the UK... when the shorts properly come out (sun or not...) and ‘Test Match Special’ becomes the soundtrack to the summer... hopefully plenty of time to catch up on the data science and AI developments of the last month. Don't miss out on more generative AI fun and games in the middle section!
   href: https://rssdsaisection.substack.com/p/july-newsletter-940
