Analytics note for forked repos

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,11 @@ website:
   site-url: https://realworlddatascience.net/
   repo-url: https://github.com/realworlddatascience/realworlddatascience.github.io
   repo-actions: [edit, issue]
+  # If you are forking our repository to develop content -- whether for Real World Data Science 
+  # or your own purposes -- please disable our Google Analytics tag (below) during development
+  # and/or replace with your own GA tag before deployment. 
+  # This is to prevent your activity being tracked and counted in our analytics dashboard.
+  # Thank you!
   google-analytics: "G-1TTWB7YTR6"
   navbar:
     background: "#f0eeeb"
