--- a/viewpoints/newsletter/rssdsai-newsletter.yml
+++ b/viewpoints/newsletter/rssdsai-newsletter.yml
@@ -1,3 +1,8 @@
+- title: "October 2023"
+  intro: Well, we had a great week of sunshine in early September in the UK -- but with the mornings increasingly dark and the temperature dropping it feels like summer is now officially over... So high time for some in depth AI commentary. Don't miss out on more generative AI fun and games in the middle section!
+  href: https://rssdsaisection.substack.com/p/october-newsletter-d43
+  date: 10/02/2023
+
 - title: "September 2023"
   intro: I hope you have been enjoying the summer... we’ve had the world’s hottest July ever, although sadly this seems to have translated into rain for the UK... At least we’ve had the World Athletics Championships for inspiration... But high time for some in depth data science commentary -- a bumper issue this time after our month off! Don't miss out on more generative AI fun and games in the middle section!
   href: https://rssdsaisection.substack.com/p/september-newsletter-256
