--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -188,8 +188,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/15801324?v=4",
       "profile": "https://github.com/holliejohnson",
       "contributions": [
-        "ideas",
-        "review"
+        "ideas"
       ]
     }
   ],
