--- a/viewpoints/newsletter/rssdsai-newsletter.yml
+++ b/viewpoints/newsletter/rssdsai-newsletter.yml
@@ -1,3 +1,8 @@
+- title: "November 2023"
+  intro: Well, the clocks have recently changed in the UK -- a sure sign of darker nights and colder weather... so high time to curl up with some thought provoking AI and Data Science reading materials!
+  href: https://rssdsaisection.substack.com/p/november-newsletter-e62
+  date: 11/04/2023
+
 - title: "October 2023"
   intro: Well, we had a great week of sunshine in early September in the UK -- but with the mornings increasingly dark and the temperature dropping it feels like summer is now officially over... So high time for some in depth AI commentary. Don't miss out on more generative AI fun and games in the middle section!
   href: https://rssdsaisection.substack.com/p/october-newsletter-d43
