--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -198,8 +198,7 @@
       "profile": "https://github.com/Isabelsassoon",
       "contributions": [
         "content",
-        "ideas",
-        "review"
+        "ideas"
       ]
     }
   ],
