--- a/_quarto.yml
+++ b/_quarto.yml
@@ -86,8 +86,8 @@ website:
         icon: github
         aria-label: GitHub
       - href: https://twitter.com/rwdatasci
-        icon: twitter
-        aria-label: Twitter
+        icon: twitter-x
+        aria-label: Twitter/X
       - href: https://fosstodon.org/@rwdatasci
         icon: mastodon
         aria-label: Mastodon
