--- a/ideas/datasciencebites/posts/_metadata.yml
+++ b/ideas/datasciencebites/posts/_metadata.yml
@@ -1,5 +1,5 @@
 include-in-header: 
-  - ../progressbar.html
+  - ../../../progress-bar.html
 
 include-after-body: 
   - ../datasciencebites-logo.html
