--- a/ideas/posts/_metadata.yml
+++ b/ideas/posts/_metadata.yml
@@ -1,3 +1,6 @@
+include-in-header: 
+  - ../../progress-bar.html
+
 comments:
   giscus: 
       repo: realworlddatascience/realworlddatascience.github.io
