--- a/viewpoints/newsletter/rssdsai-newsletter.yml
+++ b/viewpoints/newsletter/rssdsai-newsletter.yml
@@ -1,3 +1,8 @@
+- title: "December 2023"
+  intro: Well, we’ve seen snow for the first time in a while in the UK... winter coat and big jumper definitely required! High time to curl up in the warm with some thought provoking AI and Data Science reading materials...
+  href: https://rssdsaisection.substack.com/p/december-newsletter-11a
+  date: 12/03/2023
+  
 - title: "November 2023"
   intro: Well, the clocks have recently changed in the UK -- a sure sign of darker nights and colder weather... so high time to curl up with some thought provoking AI and Data Science reading materials!
   href: https://rssdsaisection.substack.com/p/november-newsletter-e62
