--- a/viewpoints/newsletter/rssdsai-newsletter.yml
+++ b/viewpoints/newsletter/rssdsai-newsletter.yml
@@ -1,3 +1,8 @@
+- title: "January 2024"
+  intro: Happy New Year! I hope you all had a great festive period catching up with friends and family and are suitably energised for 2024... or not! Either way, how about easing gently into January with some thought provoking AI and Data Science reading materials...
+  href: https://rssdsaisection.substack.com/p/january-newsletter-9f0
+  date: 01/02/2024
+
 - title: "December 2023"
   intro: Well, we’ve seen snow for the first time in a while in the UK... winter coat and big jumper definitely required! High time to curl up in the warm with some thought provoking AI and Data Science reading materials...
   href: https://rssdsaisection.substack.com/p/december-newsletter-11a
